# marypy

./: .gitignore  pyproject.toml
marypy/: dashboard.py  data_operations.py
marypy/assets/: styles.css
