[tool.poetry]
name = "marypy"
version = "0.1.0"
description = ""
authors = ["Kyle Marden <kyle.marden@yahoo.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dash = "^2.18.2"
pandas = "^2.2.3"
plotly = "^5.24.1"


[tool.poetry.group.dev.dependencies]
icecream = "^2.1.3"
loguru = "^0.7.3"
ruff = "^0.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
